fix image squishing on 2x1s and 1x1s, footer coloring

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -210,6 +210,7 @@ header#site-header {
 }
 
 footer#site-footer{
+  background-color: rgba(25, 25, 25, 0.95);
   text-align: center;
   z-index: 5;
   a {
@@ -230,6 +231,10 @@ footer#site-footer{
   }
   
 }
+
+.article-footer {
+    background-color: #ccc !important;
+  }
 
 
 /// HOMEPAGE STUFF
@@ -261,8 +266,10 @@ footer#site-footer{
   transition: all .28s cubic-bezier(.4,0,.2,1);
 
   &:hover {
+    border-width: 8px !important;
     box-shadow: 0 3px 10px rgba(0,0,0,.23),
               0 3px 10px rgba(0,0,0,.16);
+
 
   }
 
@@ -304,7 +311,7 @@ footer#site-footer{
       z-index: 2;
     }
     .card-image {
-      height: 100%;
+ 
       width: 100%;
       position: absolute;
       left: 0;
@@ -474,6 +481,7 @@ footer#site-footer{
     .card-image{
       height:50%;
       bottom: 0;
+      width: auto;
     }
     .card-preview{
       color:$dove-gray;
@@ -659,6 +667,7 @@ footer#site-footer{
     }
     .card-image{
       top: 0;
+      width: auto;
       height: $card-height + $card-border-width;
     }
     time {
@@ -1015,6 +1024,12 @@ header#site-header {
 }
 
 @media(max-width: 870px) {
+  #small-logo {
+    display: none !important;
+  }
+}
+
+@media(max-width: 810px) {
   nav#site-navigation {
     a {
       font-size: 12px !important;
@@ -1023,9 +1038,7 @@ header#site-header {
     }
   }
 
-  #small-logo {
-    display: none !important;
-  }
+  
 
    #nav-search {
     font-size: 12px;
@@ -1271,6 +1284,7 @@ section.category {
   .card {
     margin-bottom: 25px;
     width: 100%;
+    overflow: hidden;
 
     .byline {
       opacity: 0.7;
@@ -1389,7 +1403,7 @@ section.category {
       }
 
       .card-image {
-        width: 50%;
+        width: auto;
         left: 200px;
         height: 100%;
       }
